Login form not redirecting to LoginController

--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="LoginServlet" method="post">
+<form action="LoginController" method="POST">
 
     Username: <input type="text" name="user">
     <br>
