--- a/src/main/webapp/WEB-INF/templates/cart.html
+++ b/src/main/webapp/WEB-INF/templates/cart.html
@@ -13,7 +13,7 @@
 <body>
 
 
-<h1>Ecco il tuo carrello<span th:text="${session.user.name}">NomeProva</span></h1>
+<h1>Ecco il tuo carrello<span th:text="${session.user.userName}">NomeProva</span></h1>
 <h2>Prodotti nel carrello:</h2>
 
 <p>Non c'è nulla</p>
