--- a/src/main/webapp/WEB-INF/templates/orders.html
+++ b/src/main/webapp/WEB-INF/templates/orders.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<h1>Welcome to Our Company <span th:text="${session.user.name}">NomeProva</span></h1>
+<h1>Welcome to Our Company <span th:text="${session.user.userName}">NomeProva</span></h1>
 <h2>Web Site Main Ingredients:</h2>
 
 <p>Pages (HTML)</p>
