--- a/src/main/webapp/WEB-INF/templates/search.html
+++ b/src/main/webapp/WEB-INF/templates/search.html
@@ -33,7 +33,7 @@
             <tr th:each="product : ${products}">
                 <td th:text="${product.productName}"></td>
                 <td th:text="${product.productDescription}"></td>
-                <td th:text="${product.price}"></td>
+                <td th:text="${product.supplierProductCost}"></td>
                 <td th:text="${product.supplierName}"></td>
             </tr>
             <tr>
