--- a/src/main/webapp/WEB-INF/templates/search.html
+++ b/src/main/webapp/WEB-INF/templates/search.html
@@ -19,7 +19,7 @@
 </div>
 
 <div>
-    <table style="width:50%">
+    <table style="width:100%">
         <caption>Products from the marketplace</caption>
         <thead>
             <tr>
@@ -34,31 +34,34 @@
             <tr th:each="product : ${products.supplierProductMultiMap.get(productId)}">
                 <td th:text="${product.productName}"></td>
                 <td th:text="${product.productDescription}"></td>
-                <td th:text="${product.supplierProductCost}"></td>
+                <td th:text="${product.supplierProductCost}"></td>  <!-- if product.isOnDiscount 'illimuna prezzo' -->
                 <td th:text="${product.supplierName}"></td>
-                <form action="AddToCart"  th:object="${product}" method="POST">
-                    <input type="hidden" th:value="${product.productId}"    name="productId" />
-                    <input type="hidden" th:value="${product.supplierId}"   name="supplierId" />
-                    <input type="hidden" th:value="${product.supplierProductCost}"   name="supplierProductCost" />
+                <td>
+                    <form action="AddToCart"  th:object="${product}" method="POST">
+                        <input type="hidden" th:value="${product.productId}"    name="productId" />
+                        <input type="hidden" th:value="${product.supplierId}"   name="supplierId" />
+                        <input type="hidden" th:value="${product.supplierProductCost}"   name="supplierProductCost" />
 
-                    <!--
-                    <input type="hidden" th:value="${product.productName}"    name="productName" />
-                    <input type="hidden" th:value="${product.productDescription}"   name="productDescription" />
-                    <input type="hidden" th:value="${product.productCategory}"    name="productCategory" />
-                    <input type="hidden" th:value="${product.productCategoryId}"    name="productCategoryId" />
-                    <input type="hidden" th:value="${product.productImagePath}"    name="productImagePath" />
-                    <input type="hidden" th:value="${product.supplierName}"   name="supplierName" />
-                    <input type="hidden" th:value="${product.onDiscount}"   name="onDiscount" />
-                    <input type="hidden" th:value="${product.originalProductCost}"   name="originalProductCost" />
-                    -->
-                    <input type="submit"                                    value="Add to cart" />
-                </form>
+                        <!--
+                        <input type="hidden" th:value="${product.productName}"    name="productName" />
+                        <input type="hidden" th:value="${product.productDescription}"   name="productDescription" />
+                        <input type="hidden" th:value="${product.productCategory}"    name="productCategory" />
+                        <input type="hidden" th:value="${product.productCategoryId}"    name="productCategoryId" />
+                        <input type="hidden" th:value="${product.productImagePath}"    name="productImagePath" />
+                        <input type="hidden" th:value="${product.supplierName}"   name="supplierName" />
+                        <input type="hidden" th:value="${product.onDiscount}"   name="onDiscount" />
+                        <input type="hidden" th:value="${product.originalProductCost}"   name="originalProductCost" />
+                        -->
+                        <input type="submit"                                    value="Add to cart" />
+                    </form>
+                </td>
             </tr>
             <tr>
                 <td>Nome template</td>
                 <td>Description template</td>
                 <td>Cost template</td>
                 <td>Supplier template</td>
+                <td> <form action="#" method="post"> </form></td>
             </tr>
         </tbody>
     </table>
