--- a/src/main/webapp/WEB-INF/templates/search.html
+++ b/src/main/webapp/WEB-INF/templates/search.html
@@ -14,8 +14,9 @@
 <div class="topnav">
     <p>Link veloci</p>
     <a th:href="@{/home}">Home</a>
-    <a th:href="@{/cart}">Cart</a>
-    <a th:href="@{/orders}">Orders</a>
+    <a th:href="@{/shoppingCart}">Shopping cart</a>
+    <a th:href="@{/orders}">My Orders</a>
+    <a th:href="@{/logout}">Logout</a>
 </div>
 
 <div>
