--- a/src/main/webapp/WEB-INF/templates/search.html
+++ b/src/main/webapp/WEB-INF/templates/search.html
@@ -5,7 +5,7 @@
     <title>Search</title>
 
     <link rel="stylesheet" type="text/css" media="all"
-          href="../CSS/search.css" th:href="@{/css/search.css}" />
+          href="../css/search.css" th:href="@{/css/search.css}" />
 </head>
 
 
@@ -33,7 +33,17 @@
         </thead>
         <tbody th:remove="all-but-first" th:each="productId : ${products.supplierProductMultiMap.keySet()}">
             <tr th:each="product : ${products.supplierProductMultiMap.get(productId)}">
-                <td th:text="${product.productName}"></td>
+                <td>
+                    <!-- form reso cliccabile e modificato con css -->
+                    <form method="POST" action="showProductInfo" class="inline">
+                        <!-- il tag input vine utilizzato per mandare parametri nella richiesta -->
+                        <input type="hidden" name="productId" th:value="${productId}" value="Id prodotto">
+                        <input type="submit" name="productName" th:value="${product.productName}" value="Nome prodotto" class="link-button">
+                        <!-- il tag button può essere utilizzato per inserire STATICAMENTE il testo del link -->
+                        <!-- <button type="submit" class="link-button"> Testo del link</button> -->
+                        <!-- inserire più 'type=submit' fa comparire più bottoni -->
+                    </form>
+                </td>
                 <td th:text="${product.productDescription}"></td>
                 <td th:text="${product.supplierProductCost}"></td>  <!-- if product.isOnDiscount 'illimuna prezzo' -->
                 <td th:text="${product.supplierName}"></td>
@@ -42,17 +52,6 @@
                         <input type="hidden" th:value="${product.productId}"    name="productId" />
                         <input type="hidden" th:value="${product.supplierId}"   name="supplierId" />
                         <input type="hidden" th:value="${product.supplierProductCost}"   name="supplierProductCost" />
-
-                        <!--
-                        <input type="hidden" th:value="${product.productName}"    name="productName" />
-                        <input type="hidden" th:value="${product.productDescription}"   name="productDescription" />
-                        <input type="hidden" th:value="${product.productCategory}"    name="productCategory" />
-                        <input type="hidden" th:value="${product.productCategoryId}"    name="productCategoryId" />
-                        <input type="hidden" th:value="${product.productImagePath}"    name="productImagePath" />
-                        <input type="hidden" th:value="${product.supplierName}"   name="supplierName" />
-                        <input type="hidden" th:value="${product.onDiscount}"   name="onDiscount" />
-                        <input type="hidden" th:value="${product.originalProductCost}"   name="originalProductCost" />
-                        -->
                         <input type="submit"                                    value="Add to cart" />
                     </form>
                 </td>
@@ -67,8 +66,6 @@
         </tbody>
     </table>
 </div>
-
-
 
 </body>
 </html>
