--- a/src/main/webapp/WEB-INF/templates/home.html
+++ b/src/main/webapp/WEB-INF/templates/home.html
@@ -6,8 +6,9 @@
   <title>Marketplace App</title>
   <meta charset="UTF-8">
 
-  <link rel="stylesheet" type="text/css" media="all"
-        href="../CSS/mystyle.css" th:href="@{/css/mystyle.css}" />
+    <link rel="stylesheet" type="text/css" media="all"
+          href="../css/search.css" th:href="@{/css/myStyle.css}" />
+
 </head>
 
 <body>
@@ -36,49 +37,116 @@
   <a th:href="@{/logout}">Logout</a>
 </div>
 
-<form action="search/products" method="POST">
-    <p>Cosa vuoi cercare di bello? </p>
-    <input type="text" name="keyword" >
-    <input type="submit" value="vai!">
-</form>
+<div>
+    <form action="search/products" method="POST">
+        <p>Cosa vuoi cercare di bello? </p>
+        <input type="text" th:placeholder="'Oasis..'" name="keyword" >
+        <input class="styled-form-button" type="submit" value="vai!">
+    </form>
+</div>
+
 
 <div>
-    <table style="width:100%">
-      <caption>Seen recently</caption>
-          <thead>
-              <tr>
-                <th scope="col">Product</th>
-                <th scope="col">Description</th>
-                <th scope="col">Cost</th>
-                <th scope="col">Supplier</th>
-                <th scope="col">Add to cart</th>
-              </tr>
-          </thead>
-      <tbody th:remove="all-but-first" th:each="productId : ${products.supplierProductMultiMap.keySet()}">
-          <tr th:each="product : ${products.supplierProductMultiMap.get(productId)}">
-              <td th:text="${product.productName}">
-              <td th:text="${product.productDescription}"></td>
-              <td th:text="${product.supplierProductCost}"></td> <!-- if product.isOnDiscount 'illimuna prezzo' -->
-              <td th:text="${product.supplierName}"></td>
-              <td>
-                <form th:action="${#request.contextPath} + '/products/AddToCart'"  th:object="${product}" method="POST">
-                  <input type="hidden" th:value="${product.productId}"    name="productId" />
-                  <input type="hidden" th:value="${product.supplierId}"   name="supplierId" />
-                  <input type="hidden" th:value="${product.supplierProductCost}"   name="supplierProductCost" />
-                  <input type="submit"                                    value="Add to cart" />
-                </form>
-              </td>
-            </tr>
-        <!-- static content -->
+    <table th:class="styled-table">
+        <caption>Seen recently</caption>
+        <thead>
         <tr>
-          <td>A product</td>
-          <td>A product's description</td>
-          <td>A product's cost</td>
-          <td>A product's vendor</td>
-          <td> <form action="#" method="post"> </form></td>
+            <th scope="col">Product</th>
+            <th scope="col">Description</th>
+            <th scope="col">Cost</th>
+            <th scope="col">Supplier</th>
+            <th scope="col">Add to cart</th>
         </tr>
-      </tbody>
-  </table>
+        </thead>
+
+        <tbody th:each="productId : ${products.supplierProductMultiMap.keySet()}" th:with="productInfo1=${products.supplierProductMultiMap.get(productId)[0]}">
+        <tr>
+            <td>
+                <!-- form reso cliccabile e modificato con css -->
+                <form th:action=" ${#request.contextPath} + '/search/products/showProductInfo' " class="inline" method="POST" >
+                    <!-- il tag input vine utilizzato per mandare parametri nella richiesta -->
+                    <input type="hidden" name="productId" th:value="${productId}" value="Id prodotto">
+                    <input type="submit" name="productName" th:value="${productInfo1.productName}" value="Nome prodotto" class="link-button">
+                    <!-- il tag button può essere utilizzato per inserire STATICAMENTE il testo del link -->
+                    <!-- <button type="submit" class="link-button"> Testo del link</button> -->
+                    <!-- inserire più 'type=submit' fa comparire più bottoni -->
+                </form>
+            </td>
+            <td th:text="${productInfo1.productDescription}"></td>
+            <td th:text="${productInfo1.supplierProductCost}"></td>  <!-- if product.isOnDiscount 'illimuna prezzo' -->
+            <td th:text="${productInfo1.supplierName}"></td>
+            <td>
+                <form th:action="${#request.contextPath} + '/products/AddToCart'"  th:object="${productInfo1}" method="POST">
+                    <input type="hidden" th:value="${productInfo1.productId}"    name="productId" />
+                    <input type="hidden" th:value="${productInfo1.supplierId}"   name="supplierId" />
+                    <input type="hidden" th:value="${productInfo1.supplierProductCost}"   name="supplierProductCost" />
+                    <input type="submit"                                    value="One-click buy" />
+                </form>
+            </td>
+
+            <!--    Questa entry della tabela contine tutte le informazioni sui venditori di tale prodotto
+                    che si è deciso di non mostrare per rendere più fluida l'esperienza utente almeno nella home
+            <td>
+                <table th:each="supplier : ${products.supplierProductMultiMap.get(productId)}">
+                    <caption>Suppliers</caption>
+                    <thead>
+                    <tr>
+                        <th scope="col">Supplier</th>
+                        <th scope="col">Cost</th>
+                        <th scope="col">Rating</th>
+                        <th scope="col">Range</th>
+                        <th scope="col">Add to cart</th>
+                    </tr>
+                    </thead>
+                    <tr>
+                        <td th:text="${supplier.supplier.supplierName}"> Venditore 0</td>
+                        <td th:text="${supplier.supplierProductCost}">2000.00</td>
+                        <td th:text="${supplier.supplier.supplierRating}">0.0</td>
+                        <td>
+                            <table>
+                                <thead>
+                                <tr>
+                                    <th scope="col">Range</th>
+                                    <th scope="col">minItem</th>
+                                    <th scope="col">maxItem</th>
+                                    <th scope="col">cost</th>
+                                </tr>
+                                </thead>
+                                <tr th:each="range : ${supplier.supplier.supplierShippingPolicy.ranges}" >
+                                    <td th:text="${supplier.supplier.supplierShippingPolicy.ranges.indexOf(range) + 1}">1</td>
+                                    <td th:text="${range.minAmount}">1</td>
+                                    <td th:text="${range.maxAmount}">5</td>
+                                    <td th:text="${range.cost}">100,99</td>
+                                </tr>
+                            </table>
+                        </td>
+                        <td>
+                            <form th:action="${#request.contextPath} + '/products/AddToCart'" method="POST">
+                                <label for="int">How many:</label>
+                                <select name="howMany" id="int">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="3">5</option>
+                                    <option value="3">6</option>
+                                    <option value="3">7</option>
+                                    <option value="3">8</option>
+                                    <option value="3">9</option>
+                                </select>
+                                <input type="hidden" th:value="${productInfo1.productId}"    name="productId" />
+                                <input type="hidden" th:value="${productInfo1.supplierId}"   name="supplierId" />
+                                <input type="hidden" th:value="${productInfo1.supplierProductCost}"   name="supplierProductCost" />
+                                <input type="submit" value="Add to cart">
+                            </form>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+            -->
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 </body>
