--- a/src/main/webapp/WEB-INF/templates/shoppingCart.html
+++ b/src/main/webapp/WEB-INF/templates/shoppingCart.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
 
   <link rel="stylesheet" type="text/css" media="all"
-        href="../CSS/mystyle.css" th:href="@{/css/mystyle.css}" />
+        href="../CSS/myStyle.css" th:href="@{/css/myStyle.css}" />
 </head>
 
 <body>
@@ -26,58 +26,79 @@
 
 
 <div th:if="${not #maps.isEmpty(shoppingCart.shoppingCartList.asMap())}">
-  <table style="width:50%">
+  <table class="styled-table" style="width:100%">
     <!-- se il carrello è vuoto non mostrare la tabella -->
-    <caption>CART</caption>
+    <caption style="lighting-color: #04AA6D">CART</caption>
       <thead>
         <tr>
           <th scope="col">Product name</th>
           <th scope="col">Product Description</th>
           <th scope="col">Category</th>
           <th scope="col">Cost</th>
+          <th scope="col">How many</th>
         </tr>
       </thead>
     <tbody th:each="supplierId : ${shoppingCart.shoppingCartList.keySet()}" th:with="supplierInfo=${shoppingCart.shoppingCartList.get(supplierId)[0].supplier}" >
 
-    <tr th:each="product : ${shoppingCart.shoppingCartList.get(supplierId)}">
-        <td th:text="${product.productName}"></td>
-        <td th:text="${product.productDescription}"></td>
-        <td th:text="${product.productCategory}"></td>
-        <td th:text="${product.supplierProductCost}"></td>
+      <tr th:each="product : ${shoppingCart.shoppingCartList.get(supplierId)}" >
+          <td th:text="${product.productName}">Nome prodotto</td>
+          <td th:text="${product.productDescription}">Descrizione prodotto</td>
+          <td th:text="${product.productCategory}">Categoria del prodotto</td>
+          <td th:text="${product.supplierProductCost}">{Costo unitario}</td>
+          <td th:text="${product.howMany}">Quanti nel carrello</td>
+          <td>
+            <table>
+              <thead>
+              <tr>
+                <th scope="col">Supplier</th>
+                <th scope="col">Rating</th>
+                <th scope="col">Ranges</th>
+              </tr>
+              </thead>
+              <tr>
+                <td th:text="${supplierInfo.supplierName}"> Venditore 0</td>
+                <td th:text="${supplierInfo.supplierRating}"> 0</td>
+                <td>
+                  <table th:with="rangeCounter=0">
+                    <thead>
+                    <tr>
+                      <th scope="col">Range</th>
+                      <th scope="col">minItem</th>
+                      <th scope="col">maxItem</th>
+                      <th scope="col">cost</th>
+                    </tr>
+                    </thead>
+                    <tr th:each="range : ${supplierInfo.supplierShippingPolicy.ranges}">
+                      <td th:text="${rangeCounter+1}">1</td>
+                      <td th:text="${range.minAmount}">1</td>
+                      <td th:text="${range.maxAmount}">5</td>
+                      <td th:text="${range.cost}">100,99</td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+            </table>
+          </td>
+      </tr>
+      <tr th:with="totalamount=${shoppingCart.totalAmountBySupplier.get(supplierId)}">
+        <td th:text="'Total amount on ' + ${supplierInfo.supplierName} + ': ' + ${totalamount}">Costo totale per venditore</td>
+        <td th:if="${ totalamount <= supplierInfo.freeShippingMinAmount }" th:text="'Free shipping on ' + ${supplierInfo.supplierName} + ': ' + ${supplierInfo.freeShippingMinAmount}"> Spesa minima per spedizione gratuita </td>
+      </tr>
+      <tr>
         <td>
-          <table>
-            <thead>
-            <tr>
-              <th scope="col">Supplier</th>
-              <th scope="col">Rating</th>
-              <th scope="col">minItem</th>
-              <th scope="col">maxItem</th>
-              <th scope="col">range</th>
-            </tr>
-            </thead>
-            <tr th:each="range : ${supplierInfo.supplierShippingPolicy.ranges}">
-              <td th:text="${supplierInfo.supplierName}">
-              <td th:text="${supplierInfo.supplierRating}"></td>
-              <td th:text="${range.minAmount}"></td>
-              <td th:text="${range.maxAmount}"></td>
-              <td th:text="${range.cost}"></td>
-            </tr>
-          </table>
+          <form th:action="${#request.contextPath} + '/placeOrder'" method="POST">
+            <input type="hidden"  name="supplierId" th:value="${supplierId}" >
+            <input type="submit" value="Place order">
+          </form>
         </td>
-    </tr>
+      </tr>
 
 
-
-    <!-- mockup content -->
-    <tr th:remove="all">
-      <td>A product id</td>
-      <td>A supplier id</td>
-      <td>A product's cost</td>
-    </tr>
 
     </tbody>
   </table>
 </div>
+
 
 <p>
 <h4>User info</h4>
